--- a/client/index.html
+++ b/client/index.html
@@ -8,15 +8,22 @@
     <!-- dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
-      <h1>chatterbox</h1>
+      <h1>chatterbox</h1>`
+        <input class="name" type="text" placeholder="Enter your name">
+        <button class="set-name-btn">Set name</button>
+      <select id="roomSelect">
+      </select>
       <!-- Your HTML goes here! -->
+      <div class="messages"></div>
     </div>
-    <div id="chats"></div>
+    <div id="chats">
+    </div>
   </body>
 </html>
