Implemented friend adding functionallity

--- a/client/index.html
+++ b/client/index.html
@@ -15,13 +15,20 @@
   </head>
   <body>
     <div id="main">
-      <h1>chatterbox</h1>`
+      <h1>chatterbox</h1>
+      <div class="container">
         <input class="name" type="text" placeholder="Enter your name">
         <button class="set-name-btn">Set name</button>
+      </div>
+      <div id="send">
+        <input class="writtenText" type="text" placeholder="Enter a message">
+        <button class="submit">Send Message</button>
+      </div>
       <select id="roomSelect">
       </select>
       <!-- Your HTML goes here! -->
       <div class="messages"></div>
+
     </div>
     <div id="chats">
     </div>
