--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>chatterbox</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
-
+    
     <!-- dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -14,29 +15,41 @@
     <script src="scripts/app.js"></script>
   </head>
   <body>
-    <div id="main">
-      <h1>chatterbox</h1>
-      <form>
-        <input class="name" type="text" placeholder="Enter your name">
-        <input type="button" value="Set name"class="set-name-btn">
-      </form>
-      <div id="send">
-      <form>
-        <input class="writtenText" type="text" placeholder="Enter a message">
-        <input type="button" value="Send Message" class="submit">
-      </form>
-      <form>
-        <input class="writtenRoomName" type="text" placeholder="Enter a roomname">
-        <input type="button" value="Add roomname" class="addRoomname">
-      </form>
+    <div class="container">
+      <div id="main" class="row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+          <h1>chatterbox</h1>
+          <form class="form-group">
+            <input class="name form-control" type="text" placeholder="Enter your name">
+            <input type="button" value="Set name"class="set-name-btn button btn-success">
+          </form>
+          <form id="send">
+            <input  id="message" class="message writtenText form-control" type="text" placeholder="Enter a message">
+            <input type="button" value="Send Message" class="submit button btn-success">
+          </form>
+          <form>
+            <input class="writtenRoomName form-control" type="text" placeholder="Enter a roomname">
+            <input type="button" value="Add roomname" class="addRoomname button btn-success">
+          </form>
+          <select id="roomSelect">
+          </select>
+          <!-- Your HTML goes here! -->
+          <div class="messages"></div>
+        </div>
+        <div class="col-md-3">
+        </div>
       </div>
-      <select id="roomSelect">
-      </select>
-      <!-- Your HTML goes here! -->
-      <div class="messages"></div>
-
-    </div>
-    <div id="chats">
+      <div class= "row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+            <div id="chats"></div>
+        </div>
+        <div class="col-md-3">
+        </div>
+      </div>
     </div>
   </body>
 </html>
